@@ -26,7 +26,9 @@ User visible changes
 * New NEW-CLX demo: foch.lisp draws fractal snowflakes.
   Implemented XLIB:SET-MODIFIER-MAPPING, XLIB:KEYSYM->KEYCODES,
   XLIB:ACCESS-HOSTS, XLIB:ADD-ACCESS-HOST, XLIB:REMOVE-ACCESS-HOST,
-  XLIB:CHANGE-KEYBOARD-CONTROL.
+  XLIB:CHANGE-KEYBOARD-CONTROL, XLIB:CHANGE-KEYBOARD-MAPPING,
+  XLIB:KEYBOARD-MAPPING, XLIB:KEYSYM-NAME, XLIB:KEYCODE->CHARACTER,
+  XLIB:SHAPE-EXTENTS, XLIB:SHAPE-RECTANGLES, XLIB:DEFAULT-KEYSYM-INDEX.
   Use MAP instead of ELT for sequence access in NEW-CLX.
 
 * The command line option -v now affects *LOAD-ECHO* also.
